<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:padding="@dimen/airm_panel_padding">

    <ImageView
        android:id="@+id/airm_iconCurl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/airm_descr_curl_icon"
        android:layout_marginTop="@dimen/airm_control_margin_vertical"
        android:src="@drawable/airm_blue_curl" />
    
    <EditText
        android:id="@+id/airm_editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/airm_iconCurl"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/airm_control_margin_vertical"
        android:ems="11"
        android:hint="@string/airm_hint_edit_email"
        android:inputType="textEmailAddress"
        android:imeOptions="actionGo" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/airm_btnSendPassword"
        style="@style/airm_btn_orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/airm_editEmail"
        android:layout_alignRight="@+id/airm_editEmail"
        android:layout_below="@+id/airm_editEmail"
        android:layout_marginTop="@dimen/airm_control_margin_vertical_double"
        android:text="@string/airm_btn_send_password" />
    
</RelativeLayout>
